--- a/FrontMetas/wwwroot/css/site.css
+++ b/FrontMetas/wwwroot/css/site.css
@@ -16,3 +16,34 @@ html {
 body {
   margin-bottom: 60px;
 }
+
+.custom-card {
+    background-color: #f8f9fa;
+    border: 1px solid #dee2e6;
+    border-radius: 0.375rem;
+    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.075);
+    padding: 1.5rem;
+    margin-bottom: 1.5rem;
+}
+
+    .custom-card .btn {
+        margin-bottom: 1rem;
+    }
+
+    .custom-card .progress {
+        margin-top: 1rem;
+    }
+
+/* Alterna los colores de las filas en la tabla tareas*/
+.table-striped tbody tr:nth-of-type(odd) {
+    background-color: #f2f2f2; /* Color para filas impares */
+}
+
+.table-striped tbody tr:nth-of-type(even) {
+    background-color: #ffffff; /* Color para filas pares */
+}
+
+/* Opcional: Cambia el color al pasar el ratón por encima */
+.table-striped tbody tr:hover {
+    background-color: #e9ecef;
+}
