--- a/FrontMetas/Pages/Index.cshtml
+++ b/FrontMetas/Pages/Index.cshtml
@@ -21,47 +21,10 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Meta 1</td>
-                            <td>
-                                <button class="btn btn-sm btn-info me-2">
-                                    <i class="bi bi-pencil"></i>
-                                </button>
-                                <button class="btn btn-sm btn-danger">
-                                    <i class="bi bi-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <div class="progress mt-2" style="height: 1.5rem;">
-                                    <div class="progress-bar" role="progressbar" style="width: 60%;" aria-valuenow="60" aria-valuemin="0" aria-valuemax="100">60%</div>
-                                </div>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Meta 2</td>
-                            <td>
-                                <button class="btn btn-sm btn-info me-2">
-                                    <i class="bi bi-pencil"></i>
-                                </button>
-                                <button class="btn btn-sm btn-danger">
-                                    <i class="bi bi-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td colspan="2">
-                                <div class="progress mt-2" style="height: 1.5rem;">
-                                    <div class="progress-bar" role="progressbar" style="width: 30%;" aria-valuenow="30" aria-valuemin="0" aria-valuemax="100">30%</div>
-                                </div>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
             </div>
-
-            <!-- Div de izquierda tareas -->
+            <!-- Div de derecha tareas -->
             <div class="col-8 custom-card">
                 <div class="d-flex justify-content-between align-items-center mb-3">
                     <h3>Tareas</h3>
@@ -79,34 +42,9 @@
                         </tr>
                     </thead>
                     <tbody>
-                        <tr>
-                            <td>Tarea 1</td>
-                            <td>2024-07-24</td>
-                            <td>En Progreso</td>
-                            <td>
-                                <button class="btn btn-sm btn-info me-2">
-                                    <i class="bi bi-pencil"></i>
-                                </button>
-                                <button class="btn btn-sm btn-danger">
-                                    <i class="bi bi-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
-                        <tr>
-                            <td>Tarea 2</td>
-                            <td>2024-07-23</td>
-                            <td>Completada</td>
-                            <td>
-                                <button class="btn btn-sm btn-info me-2">
-                                    <i class="bi bi-pencil"></i>
-                                </button>
-                                <button class="btn btn-sm btn-danger">
-                                    <i class="bi bi-trash"></i>
-                                </button>
-                            </td>
-                        </tr>
                     </tbody>
                 </table>
+
             </div>
         </div>
     </div>
@@ -131,6 +69,8 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-primary" id="btnRegistraMeta">Registrar Meta</button>
+                <button type="button" class="btn btn-info" id="btnEditaMeta">Actualizar Meta</button>
+                <button type="button" class="btn btn-danger" id="btnEliminaMeta">Eliminar Meta</button>
             </div>
         </div>
     </div>
@@ -150,12 +90,19 @@
                         <label for="txtTareaNombre">Nombre de la Tarea</label>
                         <input type="text" class="form-control" id="txtTareaNombre" placeholder="Ingrese el nombre de la tarea">
                     </div>
+                    <div class="form-group mt-3">
+                        <label for="selectMeta">Seleccionar Meta</label>
+                        <select class="form-control" id="selectMeta">
+                            <option value="0">Seleccione una meta</option>                            
+                        </select>
+                    </div>
                 </form>
             </div>
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
-                <button type="button" class="btn btn-primary" id="btnRegistraTarea">Registra Tarea</button>
+                <button type="button" class="btn btn-primary" id="btnRegistraTarea">Registrar Tarea</button>
             </div>
         </div>
     </div>
 </div>
+
