solo falta barra progresiva y los validators

--- a/FrontMetas/Pages/Index.cshtml
+++ b/FrontMetas/Pages/Index.cshtml
@@ -101,6 +101,8 @@
             <div class="modal-footer">
                 <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cerrar</button>
                 <button type="button" class="btn btn-primary" id="btnRegistraTarea">Registrar Tarea</button>
+                <button type="button" class="btn btn-info" id="btnEditaTarea">Actualizar Tarea</button>
+                <button type="button" class="btn btn-danger" id="btnEliminaTarea">Eliminar Tarea</button>
             </div>
         </div>
     </div>
