--- a/FrontMetas/Pages/Index.cshtml
+++ b/FrontMetas/Pages/Index.cshtml
@@ -27,7 +27,7 @@
             <!-- Div de derecha tareas -->
             <div class="col-8 custom-card">
                 <div class="d-flex justify-content-between align-items-center mb-3">
-                    <h3>Tareas</h3>
+                    <h4 id="lblTituloTareas">Tareas</h4>
                     <button class="btn btn-primary mb-3" id="btnNvaTarea">
                         <i class="bi bi-plus"></i> Nueva Tarea
                     </button>
